--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure("2") do |config|
     # Install NodeJS?
     :nodejs => {
       :install => true,
-      :gruntjs => false
+      :gruntjs => true
     },
     # Web settings
     :web => {
