--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
-    "name": "noderize",
-    "description": "websockets",
-    "version": "0.0.1",
-    "private": false,
-    "dependencies": {
-        "express"    : "3.4.8",
-        "socket.io"  : "0.9.16",
-        "ejs"        : "0.8.5"
-    }
+  "name": "Noderize",
+  "description": "Node/Websockets/WebGL fun",
+  "version": "0.0.1",
+  "author": {
+    "name": "Jon Hartman",
+    "url": "http://focus-43.com"
+  },
+  "dependencies": {
+    "express": "3.4.8",
+    "socket.io": "0.9.16",
+    "ejs": "0.8.5"
+  },
+  "devDependencies": {
+    "supervisor": "0.5.7",
+    "grunt-bump": "0.0.2",
+    "grunt-contrib-concat": "0.3.0",
+    "grunt-contrib-uglify": "0.3.2",
+    "grunt-contrib-jshint": "0.8.0",
+    "grunt-contrib-watch": "0.5.3",
+    "grunt-contrib-sass": "0.7.2",
+    "grunt-newer": "~0.6.1",
+    "grunt": "0.4.2"
+  }
 }
